# template-project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  compose.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: README.md  documents.html  index.md
src/utils/: seed.py  timer.py
tests/: test_sample.py
