[tool.poetry]
name = "project_name"
version = "0.1.0"
description = ""
authors = ["yumizz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.9.16"
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
pytest = "^7.2.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
ipykernel = "^6.19.4"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.3"
mkdocs-print-site-plugin = "^2.3.4"
htmlark = "^1.0.0"
mkdocs-minify-plugin = "^0.6.2"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
ignore_missing_imports = true
